--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,90 @@
-.App {
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+body{
+  overflow-x: hidden;
+}
+.header{
   text-align: center;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.container{
   display: flex;
+    flex-direction: row;
+    margin-top: 15px;
+}
+.buttons{
+  width:30%;
+}
+.btn{
+  display: block;
+   padding: 18px 60px;
+   margin: 20px;
+   font-size: 1em;
+   font-weight: bold;
+   border: none;
+   transition: .4s ease-in;
+   background-color: yellow;
+   width: 75%;
+   border-radius: 5px;
+}
+.btn:hover{
+  background-color: yellow;
+  box-shadow: 0px 0px 5px yellow;
+}
+.content-right{
+  width: 40%;
+}
+.right{
+  display: flex;
+/* width: 70%;
+  border-left: 1px solid black;*/
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
-
-.App-link {
-  color: #61dafb;
+.cards-content{
+  display:flex;
+  flex-direction: column;
 }
+.cards{
+  width: 25rem;
+  height: 15rem;
+  background: white;
+  box-shadow:  0 4px 8px 0 rgba(0, 0, 0, 0.2),
+  0 6px 20px 0 rgba(187, 99, 99, 0.19);
+  border-radius: 4px;
+ margin-bottom: 10px;
+ margin-top: 18px;
+ margin-left: 3rem;
+ padding-left: 15px;
+} 
+.right .cards-content .cards .title{
+ margin-top: 10%;
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+}
+.btn-cart-1 {
+  padding: 10px;
+  font-size: 1em;
+  font-weight: bold;
+  border: none;
+  background-color: yellow;
+  margin-left: 15%;
+  justify-content: space-around;
+  cursor: pointer;
+}
+.btn-cart-1:hover{
+  background-color: red;
+}
+.btn-cart-2 {
+  padding: 10px;
+  font-size: 1em;
+  font-weight: bold;
+  border: none;
+  background-color: yellow;
+  margin-left: 15%;
+  justify-content: space-around;
+  cursor: pointer;
+}
+.btn-cart-2:hover{
+  background-color: green;
 }
